[tool.poetry]
name = "ha-templari-kita"
version = "0.0.42"
description = "Home Assistant integration for Templari Kita heat pump via Modbus TCP bridge"
authors = ["Kaspars Dancis <kaspars@danc.is>"]
readme = "README.md"
packages = [{include = "ha_templari_kita"}]

[tool.poetry.dependencies]
python = "^3.10"
pymodbus = "^3.6.8"

[tool.poetry.group.dev.dependencies]
homeassistant = "^2022.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
